--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,15 @@
-body {
-	background:url(../assets/PattayaBeach.jpg);
-    background-size: 100% 100%;
+.hero
+{
+    padding-top: 50px;
+    background-image: url('../assets/PattayaBeach.jpg');
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    width:100%;
 }
 
-.logo
+.image_logo
 {
-    width: 100px;
-    height: 100px;
-
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    margin: auto;
+    width: 40%;
+    height: auto;
 }
