--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-.hero
-{
+body {
+    font-family: 'Oxygen', sans-serif;
+}
+
+.hero {
     padding-top: 50px;
     background-image: url('../assets/PattayaBeach.jpg');
     background-size: cover;
@@ -8,8 +11,7 @@
     width:100%;
 }
 
-.image_logo
-{
+.image_logo {
     width: 40%;
     height: auto;
 }
